--- a/.env.local.example
+++ b/.env.local.example
@@ -1,14 +1,12 @@
-# Gemini AI (for AI features like quote generation and content polishing)
-VITE_GEMINI_API_KEY=your_gemini_api_key_here
-
-# Notion Integration (for CMS content)
-VITE_NOTION_KEY=your_notion_integration_token
-VITE_NOTION_ABOUT_PAGE=your_about_page_id
-VITE_NOTION_THOUGHTS_DB=your_thoughts_database_id
-VITE_NOTION_QUOTES_DB=your_quotes_database_id
-VITE_NOTION_CRAFTS_DB=your_crafts_database_id
-VITE_NOTION_RECS_PAGE=your_recommendations_page_id
-
-# Supabase (for guestbook database)
+# CLIENT-SIDE (exposed to browser - safe for Supabase only)
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# SERVER-SIDE (serverless functions only - NEVER exposed to browser)
+GEMINI_API_KEY=your_gemini_api_key_here
+NOTION_KEY=your_notion_integration_token
+NOTION_ABOUT_PAGE=your_about_page_id
+NOTION_THOUGHTS_DB=your_thoughts_database_id
+NOTION_QUOTES_DB=your_quotes_database_id
+NOTION_CRAFTS_DB=your_crafts_database_id
+NOTION_RECS_PAGE=your_recommendations_page_id
